--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-aws-codedeploy-pipeline",
   "version": "1.0.0",
-  "description": "Deploy nodejs app to aws ec2 ubuntu server with aws codedeploy and aws pipeline and Github action - CI / CD tutorial",
+  "description": "Deploy nodejs app to aws ec2 user server with aws codedeploy and aws pipeline and Github action - CI / CD tutorial",
   "main": "app.js",
   "scripts": {
     "test": "test",
